Added packages for requests and parsing

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Ravi Singh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "linkifyjs": "^2.1.9",
     "winston": "^3.2.1"
